# MTC-Hackathon-IaaS-Solution

./: .env.example  .envrc  .gitignore  AGENTS.md  PLAN.md  README.md  TODO.md  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: build-ssh-images.yml  db-bootstrap.yml  demo-reset.yml  deploy-app.yml
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/routers/: __init__.py  admin.py  auth.py  billing.py  catalog.py  dash.py  deployments.py  instances.py  networks.py  scripts.py  tasks.py  tenant.py
app/config/: entrypoint_rules.json
app/core/: config.py  deps.py  security.py
app/db/: init_db.py  session.py
app/models/: __init__.py  enums.py  models.py
app/providers/: __init__.py
app/providers/compute/: __init__.py  docker_provider.py
app/schemas/: __init__.py  admin.py  auth.py  billing.py  catalog.py  common.py  compute.py  dash.py  deployment.py  network.py  script.py  task.py  tenant.py
app/services/: __init__.py  admin_service.py  auth_service.py  billing_scheduler.py  billing_service.py  compute_service.py  deployment_service.py  network_service.py  script_service.py  task_service.py  tenant_service.py
docs/: manual-test-checklist.md  technical.md
docs/architecture/: README.md  container.mmd  context.mmd  sequence-create-instance.mmd  sequence-task-execute.mmd  tenant-isolation.mmd
infra/docker/: Dockerfile  docker-compose.app.yml  docker-compose.db.yml
infra/nginx/: nginx.conf  nginx.https.template.conf
scripts/vps/: bootstrap_db.sh  deploy_app.sh  reset_demo_environment.sh
(+8 files in other folders)
