[project]
name = "mtc-hackathon-iaas-solution"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker~=7.1.0",
    "fastapi~=0.115.12",
    "passlib[argon2]~=1.7.4",
    "psycopg[binary]~=3.2.6",
    "python-multipart~=0.0.9",
    "python-jose[cryptography]~=3.4.0",
    "sqlalchemy~=2.0.39",
    "sqlmodel~=0.0.24",
    "uvicorn[standard]~=0.34.0",
]
